asketka-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: asketka
  name: asketka
  namespace: landing
spec:
  selector:
    matchLabels:
      app: asketka
  template:
    metadata:
      labels:
        app: asketka
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: asketka
          image: aladex/asketk-landing:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http-asketka
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /index.html
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
---
apiVersion: v1
kind: Service
metadata:
  name: asketka
  namespace: landing
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-asketka
  selector:
    app: asketka
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asketka
  namespace: landing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - asketka.ru
    - www.asketka.ru
    secretName: ingress-nginx-asketka-tls
  rules:
  - host: "asketka.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: asketka
            port:
              number: 80
  - host: "www.asketka.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: asketka
            port:
              number: 80
